--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -71,7 +71,8 @@
 }
 
 .search svg {
-  padding: 8px 12px;
+  /* padding: 8px 12px; */
+  height: 100%;
   background: #febd69;
   color: #1a1a1a;
   font-size: 1.4rem;
