--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -5,6 +5,12 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.fixed {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
+
 /* Main header */
 .header__container {
   background: #131921;
