--- a/src/Components/Catagory/catagory.module.css
+++ b/src/Components/Catagory/catagory.module.css
@@ -73,7 +73,9 @@
   position: relative;
   margin-top: -10px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  max-width: 1800px;
+  gap: 50px;
   place-items: center;
   gap: 20px;
   padding: 20px;
